--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -51,3 +51,9 @@
 .app__navbar-login a:hover {
   border-bottom: 1px solid var(--color-golden);
 }
+
+.app__navbar-login div {
+  width: 1px;
+  height: 30px;
+  background-color: var(--color-grey);
+}
