--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -45,7 +45,7 @@
 .app__navbar-login a {
   margin: 0 1rem;
   text-decoration: none;
-  transition: 0.5 ease;
+  transition: 0.5s ease;
 }
 
 .app__navbar-login a:hover {
@@ -55,7 +55,7 @@
 .app__navbar-login div {
   width: 1px;
   height: 30px;
-  background-color: var(--color-grey);
+  background: var(--color-grey);
 }
 
 .app__navbar-smallscreen {
@@ -75,7 +75,7 @@
   z-index: 5;
 }
 
-.app__navbar-smallscreen_overlay .overlay_close {
+.app__navbar-smallscreen_overlay .overlay__close {
   font-size: 27px;
   color: var(--color-golden);
   cursor: pointer;
@@ -85,12 +85,49 @@
   right: 20px;
 }
 
-@media screen and (min-width: 1150px) {
+.app__navbar-smallscreen_links {
+  list-style: none;
+}
+
+.app__navbar-smallscreen_links li {
+  margin: 2rem;
+  cursor: pointer;
+  color: var(--color-golden);
+  font-size: 2rem;
+  text-align: center;
+  font-family: var(--font-base);
+}
+
+.app__navbar-smallscreen_links li:hover {
+  color: var(--color-white);
+}
+
+@media screen and (min-width: 2000px) {
+  .app__navbar-logo img {
+    width: 210px;
+  }
+}
+
+@media screen and (max-width: 1150px) {
   .app__navbar-links {
     display: none;
   }
 
   .app__navbar-smallscreen {
     display: flex;
+  }
+}
+
+@media screen and (max-width: 650px) {
+  .app__navbar {
+    padding: 1rem;
+  }
+
+  .app__navbar-login {
+    display: none;
+  }
+
+  .app__navbar-logo img {
+    width: 110px;
   }
 }
