--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -85,6 +85,16 @@
   right: 20px;
 }
 
+.app__navbar-smallscreen_links {
+  list-style: none;
+}
+
+.app__navbar-smallscreen_links li {
+  margin: 2rem;
+  cursor: pointer;
+  color: var(--color-golden);
+}
+
 @media screen and (max-width: 1150px) {
   .app__navbar-links {
     display: none;
