--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -95,6 +95,10 @@
   color: var(--color-golden);
 }
 
+.app__navbar-smallscreen_links li:hover {
+  color: var(--color-white);
+}
+
 @media screen and (max-width: 1150px) {
   .app__navbar-links {
     display: none;
