--- a/src/container/AboutUs/AboutUs.css
+++ b/src/container/AboutUs/AboutUs.css
@@ -26,3 +26,16 @@
 .app__aboutus-content_knife {
   margin: 2rem 4rem;
 }
+
+.app__aboutus-content_knife img {
+  height: 910px;
+}
+
+.app__aboutus-content_history {
+  flex: 1;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  flex-direction: column;
+  text-align: left;
+}
