--- a/src/container/AboutUs/AboutUs.css
+++ b/src/container/AboutUs/AboutUs.css
@@ -39,3 +39,9 @@
   flex-direction: column;
   text-align: left;
 }
+
+.app__aboutus-content_history p,
+.app__aboutus-content_about p {
+  margin: 2rem 0;
+  color: var(--color-grey);
+}
