--- a/src/container/AboutUs/AboutUs.css
+++ b/src/container/AboutUs/AboutUs.css
@@ -50,6 +50,11 @@
   .app__aboutus-content_knife img {
     height: 1110px;
   }
+
+  .app__aboutus-content_history p,
+  .app__aboutus-content_about p {
+    margin: 4rem 0;
+  }
 }
 
 @media screen and (min-width: 900px) {
