--- a/src/container/AboutUs/AboutUs.css
+++ b/src/container/AboutUs/AboutUs.css
@@ -46,7 +46,7 @@
   color: var(--color-grey);
 }
 
-@media screen and (min-width: 2000px) {
+@media screen and (max-width: 2000px) {
   .app__aboutus-content_knife img {
     height: 1110px;
   }
@@ -57,7 +57,7 @@
   }
 }
 
-@media screen and (min-width: 900px) {
+@media screen and (max-width: 900px) {
   .app__aboutus-content {
     flex-direction: column;
   }
@@ -67,7 +67,7 @@
   }
 }
 
-@media screen and (min-width: 650px) {
+@media screen and (max-width: 650px) {
   .app__aboutus-overlay img {
     width: 80%;
     height: 320px;
