--- a/src/components/Menuitem/MenuItem.css
+++ b/src/components/Menuitem/MenuItem.css
@@ -11,3 +11,18 @@
   justify-content: space-between;
   align-items: center;
 }
+
+.app__menuitem-sub {
+  width: 100%;
+  margin-top: 0.2rem;
+}
+
+.app__menuitem-name {
+  flex: 1;
+}
+
+.app__menuitem-dash {
+  width: 90px;
+  height: 1px;
+  background: var(--color-golden);
+}
