--- a/src/container/Menu/SpecialMenu.css
+++ b/src/container/Menu/SpecialMenu.css
@@ -20,3 +20,9 @@
   align-items: flex-start;
   flex-direction: row;
 }
+
+.app__specialMenu-menu_heading {
+  font-family: var(--font-base);
+  font-weight: 600;
+  font-size: 45px;
+}
