--- a/src/components/Menuitem/MenuItem.css
+++ b/src/components/Menuitem/MenuItem.css
@@ -27,3 +27,9 @@
   background: var(--color-golden);
   margin: 0 1rem;
 }
+
+.app__menuitem-price {
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+}
