--- a/src/container/Menu/SpecialMenu.css
+++ b/src/container/Menu/SpecialMenu.css
@@ -26,3 +26,10 @@
   font-weight: 600;
   font-size: 45px;
 }
+
+.app__specialMenu-menu_wine,
+.app__specialMenu-menu_cocktail {
+  flex: 1;
+  width: 100%;
+  flex-direction: column;
+}
