--- a/src/container/Menu/SpecialMenu.css
+++ b/src/container/Menu/SpecialMenu.css
@@ -46,3 +46,19 @@
   width: 100%;
   height: auto;
 }
+
+.app__specialMenu-menu_items {
+  display: flex;
+  flex-direction: column;
+  margin: 2rem 0;
+  width: 100%;
+}
+
+@media screen and (max-width: 2000px) {
+}
+
+@media screen and (max-width: 1150px) {
+}
+
+@media screen and (max-width: 650px) {
+}
