--- a/src/container/Menu/SpecialMenu.css
+++ b/src/container/Menu/SpecialMenu.css
@@ -58,7 +58,15 @@
 }
 
 @media screen and (max-width: 1150px) {
+  .app__specialMenu-menu {
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+  }
 }
 
 @media screen and (max-width: 650px) {
+  .app__specialMenu-menu-img {
+    width: 100%;
+  }
 }
