--- a/src/container/Menu/SpecialMenu.css
+++ b/src/container/Menu/SpecialMenu.css
@@ -55,6 +55,9 @@
 }
 
 @media screen and (max-width: 2000px) {
+  .app__specialMenu-menu {
+    flex-direction: column;
+  }
 }
 
 @media screen and (max-width: 1150px) {
