--- a/src/container/Menu/SpecialMenu.css
+++ b/src/container/Menu/SpecialMenu.css
@@ -55,8 +55,8 @@
 }
 
 @media screen and (max-width: 2000px) {
-  .app__specialMenu-menu {
-    flex-direction: column;
+  .app__specialMenu-menu_img {
+    width: 650px;
   }
 }
 
@@ -65,6 +65,10 @@
     flex-direction: column;
     align-items: center;
     width: 100%;
+  }
+
+  .app__specialMenu-menu_img {
+    margin: 3rem 0;
   }
 }
 
