--- a/src/container/Menu/SpecialMenu.css
+++ b/src/container/Menu/SpecialMenu.css
@@ -58,6 +58,10 @@
   .app__specialMenu-menu_img {
     width: 650px;
   }
+
+  .app__specialMenu-menu_img img {
+    height: 920px;
+  }
 }
 
 @media screen and (max-width: 1150px) {
