--- a/src/container/Menu/SpecialMenu.css
+++ b/src/container/Menu/SpecialMenu.css
@@ -8,13 +8,10 @@
   text-align: center;
 }
 
-.custom__button {
-  margin: 0 2rem;
-}
-
 .app__specialMenu-menu {
   width: 100%;
   margin: 2rem 0;
+
   display: flex;
   justify-content: center;
   align-items: flex-start;
@@ -26,7 +23,7 @@
   font-weight: 600;
   font-size: 45px;
   line-height: 58.5px;
-  letter-spacing: 0.04rem;
+  letter-spacing: 0.04em;
   color: var(--color-white);
 }
 
@@ -47,14 +44,15 @@
   height: auto;
 }
 
-.app__specialMenu-menu_items {
+.app__specialMenu_menu_items {
   display: flex;
   flex-direction: column;
+
   margin: 2rem 0;
   width: 100%;
 }
 
-@media screen and (max-width: 2000px) {
+@media screen and (min-width: 2000px) {
   .app__specialMenu-menu_img {
     width: 650px;
   }
@@ -77,16 +75,12 @@
 }
 
 @media screen and (max-width: 650px) {
-  .app__specialMenu-menu-img {
+  .app__specialMenu-menu_img {
     width: 100%;
   }
 
   .app__specialMenu-menu_heading {
     font-size: 35px;
     line-height: 48.5px;
-  }
-
-  .app__specialMenu-menu_img {
-    margin: 3rem 0;
   }
 }
