--- a/src/container/Chef/Chef.css
+++ b/src/container/Chef/Chef.css
@@ -17,3 +17,12 @@
   height: 40px;
   margin: 0 1rem 1rem 0;
 }
+
+.app__chef-sign {
+  width: 100%;
+  margin-top: 3rem;
+}
+
+.app__chef-sign p:first-child {
+  font-family: var(--font-base);
+}
