--- a/src/container/Chef/Chef.css
+++ b/src/container/Chef/Chef.css
@@ -37,3 +37,9 @@
   width: 250px;
   margin-top: 3rem;
 }
+
+@media screen and (max-width: 2000px) {
+  .app__chef-sign img {
+    width: 80%;
+  }
+}
