--- a/src/container/Laurels/Laurels.css
+++ b/src/container/Laurels/Laurels.css
@@ -4,3 +4,13 @@
   align-items: center;
   margin-top: 3rem;
 }
+
+.app__laurels_awards-card {
+  flex: 1;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  min-width: 230px;
+
+  margin: 1rem;
+}
