--- a/src/container/Laurels/Laurels.css
+++ b/src/container/Laurels/Laurels.css
@@ -14,3 +14,14 @@
 
   margin: 1rem;
 }
+
+.app__laurels_awards-card img {
+  width: 50px;
+  height: 50px;
+}
+
+@media screen and (min-width: 1900px) {
+  .app__laurels_awards-card {
+    min-width: 390px;
+  }
+}
