--- a/src/container/Laurels/Laurels.css
+++ b/src/container/Laurels/Laurels.css
@@ -20,6 +20,12 @@
   height: 50px;
 }
 
+.app__laurels_awards-card_content {
+  display: flex;
+  flex-direction: column;
+  margin-left: 1rem;
+}
+
 @media screen and (min-width: 1900px) {
   .app__laurels_awards-card {
     min-width: 390px;
