--- a/src/container/Gallery/Gallery.css
+++ b/src/container/Gallery/Gallery.css
@@ -40,3 +40,9 @@
 .app__gallery-images_container::-webkit-scrollbar {
   display: none;
 }
+
+.app__gallery-images_card {
+  position: relative;
+  min-width: 301px;
+  height: 447px;
+}
