--- a/src/container/Gallery/Gallery.css
+++ b/src/container/Gallery/Gallery.css
@@ -68,3 +68,7 @@
 .app__gallery-images_card:hover img {
   opacity: 0.35;
 }
+
+.app__gallery-images_card:hover .gallery__image-icon {
+  opacity: 1;
+}
