--- a/src/container/Gallery/Gallery.css
+++ b/src/container/Gallery/Gallery.css
@@ -75,4 +75,8 @@
 
 .app__gallery-images_arrows {
   width: 100%;
+  /* display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 1rem; */
 }
